adding some an actual check for a legit command and server

--- a/macple_nagios3.cfg
+++ b/macple_nagios3.cfg
@@ -18,4 +18,6 @@ define service{
                service_description    MAC 
                check_command          check_real_mac_status
                use                    generic-service
+			   is_volatile            1
+			   check_interval         15s
 }
