--- a/macple_nagios3.cfg
+++ b/macple_nagios3.cfg
@@ -10,6 +10,7 @@ define host{
         host_name               macple 
         alias                   macple 
         address                 192.168.1.107 
+		check_interval          15s
         }
 
 # Start monitoring apple
