better host config

--- a/macple_nagios3.cfg
+++ b/macple_nagios3.cfg
@@ -11,6 +11,7 @@ define host{
         alias                   macple 
         address                 192.168.1.107 
 		check_interval          15s
+		display_name            "Main Macbook Comp"
         }
 
 # Start monitoring apple
