setting interval in comman config too

--- a/mac_memory.cfg
+++ b/mac_memory.cfg
@@ -15,4 +15,5 @@
 define command{
 	command_name	check_real_mac_status
 	command_line	/usr/lib/nagios/plugins/check_mac_memory
+	command_check_interval   15s
 	}
