--- a/macple_nagios3.cfg
+++ b/macple_nagios3.cfg
@@ -10,7 +10,7 @@ define host{
         host_name               macple 
         alias                   macple 
         address                 192.168.1.107 
-		check_interval          0.2
+		check_interval          1
 		display_name            "Main Macbook Comp"
         }
 
@@ -21,5 +21,6 @@ define service{
                check_command          check_real_mac_status
                use                    generic-service
 			   is_volatile            1
-			   check_interval         0.2
+			   obsess_over_service    1
+			   check_interval         1
 }
