setting interval in comman config too

--- a/macple_nagios3.cfg
+++ b/macple_nagios3.cfg
@@ -23,4 +23,6 @@ define service{
 			   is_volatile            1
 			   obsess_over_service    1
 			   check_interval         1
+			   command_check_interval   15s
+			   
 }
